# furyctl

./: .mise.toml  README.md  pyproject.toml  pyrightconfig.json
extra/: furyctl.service
furyctl/: bus.py  common.py  controller.py  detect.py  fury.py  main.py  manager.py  rgb.py  systemd.py  udev.py  util.py
