[project]
name = "furyctl"
version = "0.0.2"
description = "System service to control Kingston Fury RGB RAM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbus-python>=1.4.0",
    "pygobject>=3.52.3",
    "pyudev>=0.24.3",
    "setproctitle>=1.3.6",
    "smbus>=1.1.post2",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pygobject-stubs>=2.13.0",
]

[project.scripts]
furyctl = "furyctl.main:main"
