[project]
name = "furyctl"
version = "0.0.3"
description = "System service to control Kingston Fury RGB DRAM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbus-fast>=4.0.0",
    "pyudev>=0.24.3",
    "setproctitle>=1.3.6",
    "smbus>=1.1.post2",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.scripts]
furyctl = "furyctl.main:main"

[tool.setuptools.packages.find]
exclude = ["extra"]
